# mkdiff

./: .gitignore  main.py  mk_project.py  pyproject.toml  requirements.txt  test.TextGrid  update-jyutping.sh
mkdiff/: __init__.py  cantonese.py  error.py  fmt.py  jyut.py  lab.py  mk_textgrid.py  mklab.py  rename.py  text2jyut.py
src/dictionary/: cantonese-opencpop.txt  cantonese.py  lazy.json
test/: test_cantonese.py  test_fmt.py  test_jyut.py  test_lab.py
